[package]
name = "trainctl"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Modern training orchestration CLI for ML workloads"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/trainctl"
homepage = "https://github.com/arclabs561/trainctl"
# publish = false  # Uncomment to prevent accidental publishing

[[bin]]
name = "trainctl"
path = "src/main.rs"

[lib]
name = "trainctl"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# AWS SDK
aws-sdk-ec2 = "1.0"
aws-sdk-ssm = "1.0"
aws-sdk-s3 = "1.0"
aws-config = "1.0"

# Regex for pod ID extraction
regex = "1.10"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
pathdiff = "0.2"
notify = "6.1"
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
base64 = "0.22"
shellexpand = "3.1"

# TUI
ratatui = "0.27"
crossterm = "0.28"
tui-textarea = "0.4"
comfy-table = "7.1"

# Process management
which = "5.0"
duct = "0.13"
walkdir = "2.4"
futures = "0.3"
sysinfo = "0.31"

# SSH and archive operations
ssh2 = "0.9"
tar = "0.4"
flate2 = "1.0"

# Gitignore parsing
ignore = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
fastrand = "2.3.0"

[dev-dependencies]
tempfile = "3.10"
mockito = "1.2"
tokio-test = "0.4"
proptest = "1.5"
mockall = "0.13"

[features]
default = []
e2e = []  # Enable end-to-end tests that require AWS credentials

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

